<resources>


    <!-- Base strings -->
    <string name="app_name">Memo Mind</string>
    <string name="share_description">Memo Mind  \n\n Notes App Create all your notes daily and at any time \n\n Features: \n\n Create the notes\n Modification of the notes\n Put the views in the notes\n Simple face and design \n Easy to use the settings \n\n Download: \n\n To download the latest version of this link %1$s/releases/latest</string>
    
    <!-- Crash Activity -->
    <string name="okay">Okay</string>
    <string name="app_crashed">App crashed</string>
    <string name="close">Close</string>
    <string name="close_app">Close app</string>
    <string name="copied">Copied to clipboard</string>
    
    
    <!-- This Strings In Settings Activity -->
    <string name="pref_settings">Settings</string>
    <string name="pref_general">General</string>
    <string name="pref_appearance">Appearance</string>
    <string name="pref_dark_theme">Dark Theme</string>
    <string name="pref_about">About</string>
    <string name="pref_discord">Our Discord</string> 
    <string name="pref_discord_desc">Join our discord channel</string>
    <string name="pref_github">Our Github</string>
    <string name="pref_github_desc">View our github repository</string>
    <string name="pref_app_version">Version</string>
    <string name="pref_follow_system">Follow System</string>
    <string name="pref_note">Note</string>
    <string name="app_des">Memo Mind is a versatile note-taking app designed for effective organization and information management. With its user-friendly interface, users can create notebooks, add text, images and other media to their notes. Notes can be easily categorized and searched for quick reference. Perfect for both personal and professional use, Memo Mindhelps keep your thoughts and ideas organized. Get started today and simplify your note-taking process.</string>
    <string name="settings_about_us_title">Contact US</string>
    
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="set_name">Set Your Name</string>
    <string name="set_name_des">Add Your Name In Home Activity</string>
    <string name="RowStyle">Rows Style</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_light">Light</string>
    <string name="theme_auto">Auto</string>
    <string name="app_version">Version </string>
    <string name="code_colors_des">Apply Highlight Code Colors</string>
    <string name="codeColors">Code Highlight</string>
    
    
    <string name="enable_dynamic">Enable Dynamic Color</string>
    <string name="dynamic_des">Dynamic color Theme api with Android 12 and ++</string>
    <string name="home_string">Home</string>
 
    <!-- Main Activity Strings -->
    <string name="not_found_text">Notes not found</string>
    <string name="not_found_des">Create a Note by clicking on the button below</string>
    <string name="create_new">Create new Note</string>
    <string name="share">Share</string>
    <string name="open_source_licence">Open source license</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    
    <!-- Note Activity -->
    <string name="new_note">New Note</string>
    <string name="title">Title</string>
    <string name="noteEdit">Note...</string>
    
    
        <string name="java_version">Java Version</string>
    <string name="program_arguments">Program Arguments</string>
    <string name="settings">Settings</string>
    <string name="appearance">Appearance</string>
    <string name="fast_jar_fs">Fast Jar File System</string>
    <string name="fast_jar_fs_desc">[Experimental] Improves build speed</string>
    <string name="compiler">Compiler</string>
    <string name="theme">Theme</string>
    <string name="about">About</string>
    <string name="discord">Discord</string> 
    <string name="discord_desc">Join our discord channel</string>
    <string name="github">Github</string>
    <string name="github_desc">View our github repository</string>
    <string name="check_for_updates">Check for updates</string>
    <string name="follow_system">Follow System</string>
    <string name="app_translation">Translation</string>
    <string name="app_translation_desc">Translate this app</string>
    <string name="dynamic_theme">Dynamic theme</string>
    <string name="dynamic_theme_desc">Applies a theme created on the color scheme of your wallpaper</string>
    <string name="editor">Editor</string>
    <string name="font_size">Font size</string>
    
    
</resources>