<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drower"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true">
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:liftOnScroll="true"
                >
            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/app_name"
                    />
                </com.google.android.material.appbar.AppBarLayout>
        

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                android:id="@+id/refresh_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.core.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fillViewport="true">

                <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        >


                    

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/notes_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clipToPadding="false"
                        android:nestedScrollingEnabled="false"
                        android:layout_weight="1"
                        android:scrollbars="none"
                            
                    />

                    <LinearLayout
                        android:id="@+id/empty_container"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:visibility="gone"
                        android:gravity="center"
                            >
                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/not_found_text"
                            android:textAppearance="?attr/textAppearanceTitleLarge"
                                />

                        <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/lol"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/not_found_des"
                                android:gravity="center"
                                android:textAppearance="?attr/textAppearanceBodyMedium"
                                android:textColor="?android:attr/textColorSecondary"
                                android:layout_marginTop="@dimen/spacing_tiny" />

                    </LinearLayout>
                </FrameLayout>
            </androidx.core.widget.NestedScrollView>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/fab"
                style="?attr/extendedFloatingActionButtonPrimaryStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/spacing_medium"
                android:text="@string/create_new"
                app:icon="@drawable/ic_add"
                app:layout_anchor="@id/refresh_layout"
                app:layout_anchorGravity="bottom|end" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>


    <com.google.android.material.navigation.NavigationView
            android:id="@+id/navigation_view"
            android:layout_gravity="start"
            android:layout_height="match_parent"
            android:layout_width="300dp"
            app:headerLayout="@layout/menu_header"
            app:menu="@menu/home_menu"
                />


</androidx.drawerlayout.widget.DrawerLayout>
